<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey">


    <ImageButton
        android:id="@+id/EditProfileToProfile"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="Goes back to profile page."
        android:padding="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_backbtn" />

    <TextView
        android:id="@+id/EnterIDText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="Please enter current username and password:"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/CurrUsernameEditText"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"
        android:hint="Username"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/EnterIDText"
        app:layout_constraintStart_toStartOf="@+id/EnterIDText"
        app:layout_constraintTop_toBottomOf="@+id/EnterIDText" />

    <EditText
        android:id="@+id/CurrPasswordEditText"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"
        android:hint="Password"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/CurrUsernameEditText"
        app:layout_constraintStart_toStartOf="@+id/CurrUsernameEditText"
        app:layout_constraintTop_toBottomOf="@+id/CurrUsernameEditText" />

    <TextView
        android:id="@+id/ChangeUsernamePrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Enter new username"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@+id/CurrPasswordEditText"
        app:layout_constraintStart_toStartOf="@+id/CurrPasswordEditText"
        app:layout_constraintTop_toBottomOf="@+id/CurrPasswordEditText" />

    <EditText
        android:id="@+id/NewUsernameEditText"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"
        android:hint="New Username"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/ChangeUsernamePrompt"
        app:layout_constraintStart_toStartOf="@+id/ChangeUsernamePrompt"
        app:layout_constraintTop_toBottomOf="@+id/ChangeUsernamePrompt" />

    <Button
        android:id="@+id/UpdateUsernameBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Update Username"
        android:backgroundTint="@color/soft_blue"
        app:layout_constraintEnd_toEndOf="@+id/NewUsernameEditText"
        app:layout_constraintStart_toStartOf="@+id/NewUsernameEditText"
        app:layout_constraintTop_toBottomOf="@+id/NewUsernameEditText" />

    <TextView
        android:id="@+id/ChangePasswordPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Enter new password"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@+id/UpdateUsernameBtn"
        app:layout_constraintStart_toStartOf="@+id/UpdateUsernameBtn"
        app:layout_constraintTop_toBottomOf="@+id/UpdateUsernameBtn" />

    <EditText
        android:id="@+id/NewPasswordEditText"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"
        android:hint="New Password"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/ChangePasswordPrompt"
        app:layout_constraintStart_toStartOf="@+id/ChangePasswordPrompt"
        app:layout_constraintTop_toBottomOf="@+id/ChangePasswordPrompt" />

    <Button
        android:id="@+id/UpdatePasswordBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/soft_blue"
        android:text="Update Password"
        app:layout_constraintEnd_toEndOf="@+id/NewPasswordEditText"
        app:layout_constraintStart_toStartOf="@+id/NewPasswordEditText"
        app:layout_constraintTop_toBottomOf="@+id/NewPasswordEditText" />

    <TextView
        android:id="@+id/EditProfileErrorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/error_orange"
        app:layout_constraintStart_toStartOf="@+id/UpdatePasswordBtn"
        app:layout_constraintTop_toBottomOf="@+id/UpdatePasswordBtn" />

    <TextView
        android:id="@+id/ChangeSuccessfulText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/very_light_grey"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditProfileToProfile" />
</androidx.constraintlayout.widget.ConstraintLayout>