<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    tools:context=".LogInActivity">

    <ImageView
        android:id="@+id/ChessBoxingLogo"
        android:layout_width="309dp"
        android:layout_height="357dp"
        android:adjustViewBounds="false"
        android:background="#00404040"
        android:backgroundTint="#5C5C5C"
        android:cropToPadding="false"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/WelcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Welcome"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/LogInText"
        app:layout_constraintEnd_toEndOf="@+id/ChessBoxingLogo"
        app:layout_constraintStart_toStartOf="@+id/ChessBoxingLogo"
        app:layout_constraintTop_toBottomOf="@+id/ChessBoxingLogo"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/LogInText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Log In:"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/UsernameText"
        app:layout_constraintEnd_toEndOf="@+id/WelcomeText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/WelcomeText"
        app:layout_constraintTop_toBottomOf="@+id/WelcomeText" />

    <EditText
        android:id="@+id/UsernameText"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="Username"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/PasswordText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogInText" />

    <EditText
        android:id="@+id/PasswordText"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/LoginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UsernameText" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/soft_blue"
        android:text="Login"
        app:layout_constraintBottom_toTopOf="@+id/toRegisterBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PasswordText"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/RegisterText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="Need an account?"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/toRegisterBtn"
        app:layout_constraintEnd_toEndOf="@+id/toRegisterBtn"
        app:layout_constraintStart_toStartOf="@+id/toRegisterBtn" />

    <Button
        android:id="@+id/toRegisterBtn"
        android:layout_width="70dp"
        android:layout_height="34dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/very_light_grey"
        android:padding="0dp"
        android:text="Register"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/LoginErrorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/error_orange"
        app:layout_constraintStart_toStartOf="@+id/PasswordText"
        app:layout_constraintTop_toBottomOf="@+id/PasswordText" />

</androidx.constraintlayout.widget.ConstraintLayout>