...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logout" />

    <ImageButton
        android:id="@+id/MenuToProfileBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="Takes user to view their profile."
...
