...
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <Button
        android:id="@+id/editprofilebtn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@color/soft_blue"
        android:text="Edit Profile"
        app:layout_constraintEnd_toEndOf="parent"
...
